--- a/midterm_project/Dockerfile
+++ b/midterm_project/Dockerfile
@@ -11,6 +11,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY predict.py .
 COPY serve.py .
 COPY midterm_model.bin/ /app/midterm_model.bin
+COPY form.html/ /app/form.html
 
 # Expose port
 EXPOSE 9696
